[metadata]
name = google_streetview_publish_client
version = 0.0.3

[options]
packages = find:
install_requires =
    gapic-google-maps-streetview-publish-v1
    oauth2client
    requests
    pydantic

[options.entry_points]
console_scripts =
  googlestreetview = google_streetview_publish_client.cli:main

[options.extras_require]
test =
    black
    pylint
    flake8<6
    flake8-import-order
    mypy
    types-setuptools
    types-requests
    pylint_pydantic
